More small problems with pod stuff - fixed.

--- a/dada/extras/documentation/pod_source/dada3_0_to_dada3_1.pod
+++ b/dada/extras/documentation/pod_source/dada3_0_to_dada3_1.pod
@@ -1,3 +1,5 @@
+=pod
+
 =head1 Upgrading Dada Mail 3.0.x to Dada Mail 3.1
 
 =head1 Background
@@ -135,3 +137,5 @@ The new C<dada_clickthrough_urls> table holds the URL redirects for the clickthr
 =item * $PROFILE_GRAVATAR_OPTIONS
 
 =back
+
+=cut
